testsuite/tests/iterators/invalid_iterator/int_to_iterator.lkt
import lexer_example
grammar foo_grammar {
    @main_rule main_rule <- Example("example")

}

class FooNode implements Node[FooNode] {
}

class Example : FooNode {

    @exported fun get_lit(): Int = 2

    @exported fun values_iterator(): Iterator[Int] =
    node.get_lit().to_iterator()
}
